// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutoWidth Code Block Select 1`] = `
<div
  className=" css-14mys1s-container"
  onKeyDown={[Function]}
>
  <span
    className="css-1f43avz-a11yText-A11yText"
    id="react-select-5-live-region"
  />
  <span
    aria-atomic="false"
    aria-live="polite"
    aria-relevant="additions text"
    className="css-1f43avz-a11yText-A11yText"
  />
  <div
    className=" css-o2aeqk-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className=" css-1ap8b8q-ValueContainer"
    >
      <div
        className=" css-1khq0o6-singleValue"
      >
        JavaScript
      </div>
      <input
        aria-autocomplete="list"
        aria-expanded={false}
        aria-haspopup={true}
        aria-readonly={true}
        className="css-mohuvp-dummyInput-DummyInput"
        disabled={false}
        id="react-select-5-input"
        inputMode="none"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        role="combobox"
        tabIndex={0}
        value=""
      />
    </div>
    <div
      className=" css-1hb7zxy-IndicatorsContainer"
    >
      <span
        className=" css-1uei4ir-indicatorSeparator"
      />
      <div
        aria-hidden="true"
        className=" css-1m7k5ev-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          height={12}
          width={7}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AutoWidth Select 1`] = `
<div
  className=" css-14mys1s-container"
  onKeyDown={[Function]}
>
  <span
    className="css-1f43avz-a11yText-A11yText"
    id="react-select-3-live-region"
  />
  <span
    aria-atomic="false"
    aria-live="polite"
    aria-relevant="additions text"
    className="css-1f43avz-a11yText-A11yText"
  />
  <div
    className=" css-13gegmk-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className=" css-9elhwp-ValueContainer"
    >
      <div
        className=" css-1n4ahi-singleValue"
      >
        JavaScript
      </div>
      <input
        aria-autocomplete="list"
        aria-expanded={false}
        aria-haspopup={true}
        aria-readonly={true}
        className="css-mohuvp-dummyInput-DummyInput"
        disabled={false}
        id="react-select-3-input"
        inputMode="none"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        role="combobox"
        tabIndex={0}
        value=""
      />
    </div>
    <div
      className=" css-1hb7zxy-IndicatorsContainer"
    >
      <span
        className=" css-1uei4ir-indicatorSeparator"
      />
      <div
        aria-hidden="true"
        className=" css-1ra8hvv-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <img
          alt=""
          className=" css-vfym8x-StyledDefaultDropdownIcon evf7wlc2"
          src="test-image-stub"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Code Block Select 1`] = `
<div
  className=" css-b62m3t-container"
  onKeyDown={[Function]}
>
  <span
    className="css-1f43avz-a11yText-A11yText"
    id="react-select-4-live-region"
  />
  <span
    aria-atomic="false"
    aria-live="polite"
    aria-relevant="additions text"
    className="css-1f43avz-a11yText-A11yText"
  />
  <div
    className=" css-o2aeqk-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className=" css-1ap8b8q-ValueContainer"
    >
      <div
        className=" css-1khq0o6-singleValue"
      >
        JavaScript
      </div>
      <input
        aria-autocomplete="list"
        aria-expanded={false}
        aria-haspopup={true}
        aria-readonly={true}
        className="css-mohuvp-dummyInput-DummyInput"
        disabled={false}
        id="react-select-4-input"
        inputMode="none"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        role="combobox"
        tabIndex={0}
        value=""
      />
    </div>
    <div
      className=" css-1hb7zxy-IndicatorsContainer"
    >
      <span
        className=" css-1uei4ir-indicatorSeparator"
      />
      <div
        aria-hidden="true"
        className=" css-1m7k5ev-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <svg
          height={12}
          width={7}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Default Select 1`] = `
<div
  className=" css-b62m3t-container"
  onKeyDown={[Function]}
>
  <span
    className="css-1f43avz-a11yText-A11yText"
    id="react-select-2-live-region"
  />
  <span
    aria-atomic="false"
    aria-live="polite"
    aria-relevant="additions text"
    className="css-1f43avz-a11yText-A11yText"
  />
  <div
    className=" css-13gegmk-control"
    onMouseDown={[Function]}
    onTouchEnd={[Function]}
  >
    <div
      className=" css-9elhwp-ValueContainer"
    >
      <div
        className=" css-1n4ahi-singleValue"
      >
        JavaScript
      </div>
      <input
        aria-autocomplete="list"
        aria-expanded={false}
        aria-haspopup={true}
        aria-readonly={true}
        className="css-mohuvp-dummyInput-DummyInput"
        disabled={false}
        id="react-select-2-input"
        inputMode="none"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        role="combobox"
        tabIndex={0}
        value=""
      />
    </div>
    <div
      className=" css-1hb7zxy-IndicatorsContainer"
    >
      <span
        className=" css-1uei4ir-indicatorSeparator"
      />
      <div
        aria-hidden="true"
        className=" css-1ra8hvv-indicatorContainer"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <img
          alt=""
          className=" css-vfym8x-StyledDefaultDropdownIcon evf7wlc2"
          src="test-image-stub"
        />
      </div>
    </div>
  </div>
</div>
`;
